# jserpy

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/jserpy/: __init__.py  json_handler.py  json_handler_utils.py  json_typing.py  jsonable.py
src/tests/: test_jserpy.py
