[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jserpy"
version = "0.1.0"
authors = [
    {name = "Ron Pick", email = "ronpi1310@gmail.com"},
]
description = "A Python library for serializing and deserializing complex objects to and from JSON"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "typing-inspect>=0.9.0",
    "numpy>=1.26.4",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/jserpy"
"Bug Tracker" = "https://github.com/yourusername/jserpy/issues"